Quorum/Library/Tests/Expressions/Pass/MultIntDouble.quorum
class Main
    action Main
        number a = 2 * 2.0
        output a
        output 2 * 2.0
    end
end