Quorum/Library/Tests/Expressions/Fail/BadErrorMessage.quorum
class Main
    action Test1 returns integer
        return 0
    end

    action Test2
        number x = 0
        number x = 0
    end
end